Refactor code structure and remove redundant sections for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3,79 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- HTML Meta Tags -->
-    <title>Abhishek Rathore – Software Developer Portfolio</title>
-    <meta
-      name="title"
-      content="Abhishek Rathore – Software Developer Portfolio"
-    />
-    <meta
-      name="description"
-      content="Explore the work and projects of Abhishek Rathore – a Java Backend Developer with a passion for scalable systems and full-stack solutions."
-    />
-    <meta name="author" content="Abhishek Rathore" />
+
+    <!-- Essential Meta Tags -->
+    <title>Jeet Solanki – Software Developer Portfolio</title>
+    <meta name="title" content="Jeet Solanki – Software Developer Portfolio" />
+    <meta name="description" content="Explore the projects of Jeet Solanki – a Java Backend Developer with a passion for unique systems." />
+    <meta name="author" content="Jeet Solanki" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://www.abhishek-rathore.com/" />
 
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://www.abhishek-rathore.com/" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Abhishek Rathore – Software Developer Portfolio"
-    />
-    <meta
-      property="og:description"
-      content="Explore the work and projects of Abhishek Rathore – a Java Backend Developer with a passion for scalable systems and full-stack solutions."
-    />
-    <meta
-      property="og:image"
-      content="https://www.abhishek-rathore.com/portfolio-cover.png"
-    />
+    <!-- GitHub Profile Link -->
+    <link rel="me" href="https://github.com/Jeet-solanki-1" />
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="abhishek-rathore.com" />
-    <meta property="twitter:url" content="https://www.abhishek-rathore.com/" />
-    <meta
-      name="twitter:title"
-      content="Abhishek Rathore – Software Developer Portfolio"
-    />
-    <meta
-      name="twitter:description"
-      content="Explore the work and projects of Abhishek Rathore – a Java Backend Developer with a passion for scalable systems and full-stack solutions."
-    />
-    <meta
-      name="twitter:image"
-      content="https://www.abhishek-rathore.com/portfolio-cover.png"
-    />
-
-    <!-- Developer Profile Links -->
-    <link rel="me" href="https://github.com/abhishekra07" />
-    <link
-      rel="me"
-      href="https://www.linkedin.com/in/abhishek-rathore-666972127"
-    />
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <!-- Favicon (Optional if you have these files) -->
+    <link rel="icon" type="image/png" href="/logo.svg" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="shortcut icon" href="/logo.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
+    <!-- Structured Data (SEO - Minimal and Clean) -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
-        "name": "Abhishek Rathore",
-        "url": "https://www.abhishek-rathore.com",
+        "name": "Jeet Solanki",
         "sameAs": [
-          "https://github.com/abhishekra07",
-          "https://www.linkedin.com/in/abhishek-rathore-666972127"
+          "https://github.com/Jeet-solanki-1"
         ],
         "jobTitle": "Software Developer",
-        "description": "Explore the work and projects of Abhishek Rathore – a Java Backend Developer with a passion for scalable systems and full-stack solutions.",
+        "description": "Explore the projects of Jeet Solanki – a Java Backend Developer with a passion for unique systems.",
         "worksFor": {
           "@type": "Organization",
           "name": "Freelance / Consulting"
